welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit: Boolean = false;
	while(vuBiscuit== false){
		avance();avance();avance();avance();avance();avance();
	recule();recule();recule();recule();recule();recule();
		if (vuBiscuit){
			return true;
		}else{
			
			return false;
		}
	}
}
	



